# Havoc

./: .gitignore  AGENTS.md  Arch.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  Client.md  ClientModernizationPlan.md  ClientStandalone.md  Config-Encryption-Plan.md  DNS_C2_OPSEC.md  DNS_TRANSPORT.md  Debug-Build-Instability-Analysis.md  Demon-mingw-updates.md  Demon.md  DemonTerminationFixes.md  NetworkAnalysis.md  ProfileSettingsFixes.md  QA_PROCESS.md  README.md  SKILL.md  SMB-Demon-Analysis.md  SleepObf-Analysis.md  TaskSystemAnalysis.md  Teamserver.md  ThemeSelector.md  TrafficImprovements.md  check_profile.py  client-build-macos.sh  darkbubble.Xresource.txt  emerald.Xresource.txt  go.mod  go.sum  havoc-dns.yaotl  makefile  prepare-ubuntu.sh
.claude/projects/-Users-kr0ff-Desktop-git-Havoc/memory/: sleepobf_unconfirmed.md
Demon/include/common/: Macros.h
Demon/include/core/: MiniStd.h  Token.h  TransportDns.h  TransportHttp.h  Win32.h
Demon/src/: Demon.c
Demon/src/core/: ObjectApi.c  Pivot.c  Transport.c  TransportSmb.c
Demon/src/inject/: InjectUtil.c
Demon/test/: test_sleepobf.c
Extension-Kit/AD-BOF/DCSync-BOF/drsuapi/: ms-drsr.h
Extension-Kit/AD-BOF/Kerbeus-BOF/asktgs/: asktgs.c
Extension-Kit/AD-BOF/Kerbeus-BOF/asktgt/: asktgt.c
Extension-Kit/AD-BOF/Kerbeus-BOF/s4u/: cross_s4u.c  s4u.c
Extension-Kit/Execution-BOF/execute-assembly/: inlineExecute-Assembly.c
client/: CMakeLists.txt
client-standalone/: CMakeLists.txt
client-standalone/cmake/toolchains/: mingw-w64.cmake
client/data/: Havoc.qrc  client.db
client/data/UIs/: Connect.ui  CredentialsTableWidget.ui  SessionTable.ui  about.ui
client/data/UIs/SmallWidgets/: ActiveOperators.ui
client/data/stylesheets/: Havoc.qss
client/data/stylesheets/Dialogs/: BasicDialog.qss  Listener.qss
client/data/themes/: README.md
client/include/: global.hpp
client/include/Havoc/: DemonCmdDispatch.h  Havoc.hpp  Packager.hpp
client/include/UserInterface/: HavocUI.hpp
client/include/Util/: ThemeManager.hpp
client/src/: Main.cc  global.cc
client/src/Havoc/: Connector.cc  Havoc.cc  Packager.cc
client/src/UserInterface/: HavocUi.cc
client/src/Util/: Base.cpp  ThemeManager.cpp
client/tests/: test_json.cpp  test_spdlog.cpp  test_toml.cpp
cmd/: cmd.go
cmd/server/: dispatch.go  teamserver.go  types.go
docs/superpowers/plans/: 2026-05-26-hvc032-commands-qa.md  2026-05-26-hvc032-qa.md  2026-05-29-dynamic-theme-stylesheet.md
improvement-docs/: 00-index.md  01-transport-tcp.md  02-transport-doh.md  03-traffic-encoding-module.md  04-sleep-obfuscation.md  05-evasion-enhancements.md  06-new-commands.md  07-crypto-improvements.md  08-listener-enhancements.md  09-teamserver-ux.md  10-injection-improvements.md  11-hvc030-sub1-jmprax-analysis.md  12-hvc030-sub2-pe-header-stomp-analysis.md  13-pe-sieve-detection-analysis.md  14-pe-sieve-scan2-analysis.md  HVC-044-stack-spoofing.md  HVC-046-exec-delay.md  HVC-047-stack-spoof-tier2.md  HVC-048-foliage-callstack-fix.md  HVC-049-dynamic-theme-stylesheet.md  HVC-050-theme-color-audit.md
improvement-docs/issue-docs/: ISS-037-shellcode-pestomp.md  RCI-001-injection-stability.md
include/UserInterface/Dialogs/: Payload.hpp
include/UserInterface/Widgets/: DemonInteracted.h  SessionTable.hpp
memory/: feedback_demon_builder_win32winnt.md
payloads/Demon/: CMakeLists.txt
payloads/Demon/include/: Demon.h
payloads/Demon/include/commands/: Command_Config.h  Command_Creds.h  Command_FS.h  Command_Inject.h  Command_Lateral.h  Command_Net.h  Command_Netinfo.h  Command_Persist.h  Command_Pivot.h  Command_Privesc.h  Command_Proc.h  Command_Token.h
payloads/Demon/include/common/: Defines.h  Macros.h
payloads/Demon/include/core/: Command.h  Memory.h  MemoryHide.h  NtdllUnhook.h  Package.h  PeProtect.h  Runtime.h  SleepObf.h  Syscalls.h  TransportDns.h  Win32.h
payloads/Demon/include/crypt/: ChaCha20Crypt.h  HmacSha256.h  Rc4Crypt.h  RsaCrypt.h  WireEncoder.h
payloads/Demon/src/: Demon.c
payloads/Demon/src/commands/: Command_Config.c  Command_Creds.c  Command_FS.c  Command_Inject.c  Command_Lateral.c  Command_Net.c  Command_Netinfo.c  Command_Persist.c  Command_Pivot.c  Command_Privesc.c  Command_Proc.c  Command_Token.c
payloads/Demon/src/core/: CoffeeLdr.c  Command.c  HwBpEngine.c  Memory.c  MemoryHide.c  MiniStd.c  NtdllUnhook.c  Obf.c  ObfFoliage.c  ObfTimer.c  ObjectApi.c  Package.c  Parser.c  PeProtect.c  Runtime.c  Socket.c  Syscalls.c  Thread.c  TransportDns.c  TransportHttp.c  Win32.c
payloads/Demon/src/crypt/: ChaCha20Crypt.c  HmacSha256.c  Rc4Crypt.c  RsaCrypt.c  WireEncoder.c
payloads/Demon/src/inject/: Inject.c
payloads/Demon/src/main/: MainExe.c
payloads/Demon/test/: test_mingw_compat.c  test_proxy_detect.c  test_sleepobf.c  test_sleepobf_combos.c
payloads/Shellcode/Include/: Core.h
payloads/Shellcode/Source/: Entry.c
pkg/agent/: agent.go  smb_framing_test.go  types.go
pkg/common/builder/: builder_autoproxy_test.go  builder_test.go
pkg/common/crypt/: aes.go  rsa.go  rsa_test.go
pkg/common/parser/: parser.go
pkg/events/: demons.go  listeners.go
pkg/handlers/: dns.go  dns_protocol.go  http.go
pkg/packager/: types.go
pkg/profile/: config.go
profiles/: havoc-macos.yaotl  havoc.yaotl
scripts/: check-missing-semicolons.sh  check_profile.py  create_profile.py  prompt.md
src/UserInterface/Dialogs/: About.cc  Connect.cc
src/UserInterface/Widgets/: LootWidget.cc  ScriptManager.cc  TeamserverTabSession.cc
teamserver/cmd/: cmd.go
teamserver/cmd/server/: agent.go  dispatch.go  listener.go  listener_field_test.go  teamserver.go  types.go
teamserver/pkg/agent/: agent.go  commands.go  demons.go  smb_framing_test.go  smb_traffic_test.go  types.go
teamserver/pkg/db/: agents.go  db.go
teamserver/pkg/events/: demons.go  listeners.go  listeners_test.go
teamserver/pkg/handlers/: dns.go  dns_protocol.go  external.go  handlers.go  http.go  http_headerfilter_test.go  types.go
teamserver/pkg/profile/: config.go
tests/: CMakeLists.txt
themes/: greennight.Xresource.txt  pinklady.Xresource.txt
(+85 files in other folders)
